# PavelChurkin-digital_twin_of_russia

./: .env.example  .gitignore  .gitkeep  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_open_contour_schema.py
backend/app/: __init__.py  audit.py  auth.py  cli.py  export.py  gateway.py  main.py  raw_export.py  schemas.py  store.py  vacancies_service.py
backend/etl/: __init__.py  base.py  connectors.py  geocoding.py  vacancies.py
backend/models/: __init__.py  scenario_engine.py
backend/tests/: conftest.py  test_api_contracts.py  test_auth_and_objects.py  test_etl.py  test_geocoding.py  test_raw_download.py  test_vacancies.py
data/classifiers/: starter-classifiers.csv
data/demo/: datasets.json  layers.json  objects.json  scenarios.json  vacancies-sample.json  vacancies.csv
docs/: architecture.md  data-passport.md  minio-storage.md  open-data-limitations.md  scenarios.md  yandex-basemap.md  yandex-regions.md
docs/матчасть/: Дорожная карта по версиям.md
docs/матчасть/2026-06-13/: MVP.md  (+20 more)
experiments/: capture_trudvsem_sample.py  gen_vacancies.py  generate_demo_vacancies.py
frontend/: .env.example  .prettierignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: regions-russia.geojson
frontend/src/: App.tsx  api.ts  reports.ts  styles.css  types.ts  useVacancies.ts
infra/: docker-compose.yml  setup-mirror.ps1  setup-mirror.sh
(+2 files in other folders)
